Change to NEI's name

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							<header class="major">
 								<h2>Resume</h2>
 							</header>
-							<p>Life lover and computer science student. Dreamer and member of <a href="https://www.facebook.com/nucleodeelectronicaeinformatica/">NEI@UAlg (Electrical and Informatics Nucleus).</a></p>
+							<p>Life lover and computer science student. Dreamer and member of <a href="https://www.facebook.com/nucleodeelectronicaeinformatica/">NEI@UAlg (Electronic and Informatics Nucleus).</a></p>
 						</div>
 						<div class="6u$ 12u$(medium) important(medium)">
 							<span class="image fit"><img src="images/unsplash-1.jpg" alt="" /></span>
