--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<div class="inner">
 					<span class="icon major fa-code"></span>
 					<h1>Hi, I'm <strong>João</strong>.</h1>
-					<p>Computer Science student @ <a href=http://www.ualg.pt/en> University of Algarve</a>, Portugal.</p>
+					<p>Computer Science student @ <a href=http://www.ualg.pt/en target="_blank"> University of Algarve</a>, Portugal.</p>
 					<ul class="actions">
 						<li><a href="#one" class="button scrolly">Discover more</a></li>
 					</ul>
@@ -36,7 +36,7 @@
 							<header class="major">
 								<h2>Resume</h2>
 							</header>
-							<p>Life lover and computer science student. Dreamer and member of <a href="https://www.facebook.com/nucleodeelectronicaeinformatica/">NEI@UAlg (Electronic and Informatics Nucleus).</a></p>
+							<p>Life lover and computer science student. Dreamer and member of <a href="https://www.facebook.com/nucleodeelectronicaeinformatica/" target="_blank">NEI@UAlg (Electronic and Informatics Nucleus).</a></p>
 						</div>
 						<div class="6u$ 12u$(medium) important(medium)">
 							<span class="image fit"><img src="images/unsplash-1.jpg" alt="" /></span>
@@ -64,8 +64,8 @@
 								<h2>Want to know more?</h2>
 							</header>
 							<p><b>Programming languages: </b>Since i started my journey in computer science, i've learned: C; Processing; Mips32; Java && Bash. 
-                            I've also did some courses at Microsoft Virtual Academy like: <a href="https://mva.microsoft.com/en-US/training-courses/programming-in-c-jump-start-14254">Programming in C# Jump Start</a>; 
-                             <a href="https://mva.microsoft.com/en-US/training-courses/html5-css3-fundamentals-development-for-absolute-beginners-14207"> HTML5 & CSS3 Fundamentals: Development for Absolute Beginners</a>.
+                            I've also did some courses at Microsoft Virtual Academy like: <a href="https://mva.microsoft.com/en-US/training-courses/programming-in-c-jump-start-14254" target="_blank">Programming in C# Jump Start</a>; 
+                             <a href="https://mva.microsoft.com/en-US/training-courses/html5-css3-fundamentals-development-for-absolute-beginners-14207" target="_blank"> HTML5 & CSS3 Fundamentals: Development for Absolute Beginners</a>.
                               Currently I am learning more about C # and developing applications for Windows 10 in Microsoft Virtual Academy.</p>
 							<p><b>Passions: </b>About my passions there's not much to tell. I really love technology and how things work. I also love beach and music that are two things that help me 
                             relax. Continuing, travels, photography, art, brain curiosities and a lot more. </p>
@@ -77,15 +77,15 @@
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
-					<li><a href="https://twitter.com/castelo1755" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="https://www.facebook.com/joaocastelo1755" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="https://www.instagram.com/_joaocastelo/" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="https://github.com/JoaoPPCastelo" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="https://twitter.com/castelo1755" target="_blank" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="https://www.facebook.com/joaocastelo1755" target="_blank" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="https://www.instagram.com/_joaocastelo/" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="https://github.com/JoaoPPCastelo" target="_blank" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="mailto:joaocastelo.dev@outlook.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; João Castelo</li>
-                    <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                    <li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
                     <li>Last update: 4/3/2016</li>
 				</ul>
 			</section>
