--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				<ul class="copyright">
 					<li>&copy; João Castelo</li>
                     <li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
-                    <li>Last update: 4/3/2016</li>
+                    <li>Last update: March 7, 2016</li>
 				</ul>
 			</section>
 
