--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 							<p><b>Programming languages: </b>Since i started my journey in computer science, i've learned: C; Processing; Mips32; Java && Bash. 
                             I've also did some courses at Microsoft Virtual Academy like: <a href="https://mva.microsoft.com/en-US/training-courses/programming-in-c-jump-start-14254" target="_blank">Programming in C# Jump Start</a>; 
                              <a href="https://mva.microsoft.com/en-US/training-courses/html5-css3-fundamentals-development-for-absolute-beginners-14207" target="_blank"> HTML5 & CSS3 Fundamentals: Development for Absolute Beginners</a>.
-                              Currently I am learning more about C # and developing applications for Windows 10 in Microsoft Virtual Academy.</p>
+                              Currently I am learning more about C # and developing applications for Windows 10 in Microsoft Virtual Academy  and doing some challenges at <a href="https://www.hackerrank.com/JoaoPPCastelo" target="_blank"> HackerRank</a></p>
 							<p><b>Passions: </b>About my passions there's not much to tell. I really love technology and how things work. I also love beach and music that are two things that help me 
                             relax. Continuing, travels, photography, art, brain curiosities and a lot more. </p>
 						</div>
