--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 			<section id="footer">
 				<ul class="icons">
 					<li><a href="https://twitter.com/castelo1755" target="_blank" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="https://www.facebook.com/joaocastelo1755" target="_blank" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="https://www.facebook.com/profile.php?id=1672424562" target="_blank" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
 					<li><a href="https://www.instagram.com/_joaocastelo/" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
 					<li><a href="https://github.com/JoaoPPCastelo" target="_blank" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="mailto:joaocastelo.dev@outlook.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
