--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							</header>
 							<p><b>Programming languages: </b>Since i started my journey in computer science, i've learned: C; Processing; Mips32; Java && Bash. 
                             I've also did some courses at Microsoft Virtual Academy like: <a href="https://mva.microsoft.com/en-US/training-courses/programming-in-c-jump-start-14254" target="_blank">Programming in C# Jump Start</a>; 
-                             <a href="https://mva.microsoft.com/en-US/training-courses/html5-css3-fundamentals-development-for-absolute-beginners-14207" target="_blank"> HTML5 & CSS3 Fundamentals: Development for Absolute Beginners</a>.
+                             <a href="https://mva.microsoft.com/en-US/training-courses/c-fundamentals-for-absolute-beginners-16169" target="_blank"> HTML5 & CSS3 Fundamentals: Development for Absolute Beginners</a>.
                               Currently I am learning more about C # and developing applications for Windows 10 in Microsoft Virtual Academy  and doing some challenges at <a href="https://www.hackerrank.com/JoaoPPCastelo" target="_blank"> HackerRank</a></p>
 							<p><b>Passions: </b>About my passions there's not much to tell. I really love technology and how things work. I also love beach and music that are two things that help me 
                             relax. Continuing, travels, photography, art, brain curiosities and a lot more. </p>
@@ -78,7 +78,7 @@
 			<section id="footer">
 				<ul class="icons">
 					<li><a href="https://twitter.com/castelo1755" target="_blank" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="https://www.facebook.com/profile.php?id=1672424562" target="_blank" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="https://www.facebook.com/joaoppcastelo" target="_blank" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
 					<li><a href="https://www.instagram.com/_joaocastelo/" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
 					<li><a href="https://github.com/JoaoPPCastelo" target="_blank" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="mailto:joaocastelo.dev@outlook.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
@@ -86,7 +86,7 @@
 				<ul class="copyright">
 					<li>&copy; João Castelo</li>
                     <li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
-                    <li>Last update: March 7, 2016</li>
+                    <li>Last update: May 2, 2016</li>
 				</ul>
 			</section>
 
