Task31 - Add projects section @ Main Page - Add Moonshot project link - Change classes to name-name format - Small changes to style

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <body>
     
         <!--TopImage-->
-        <div class="pageTopImage">
+        <div class="page-top-image">
             <img src="assets/images/sebastian-schuppik-326430.jpg" alt="Mountain view - Trolltunga, Norway">
             <div class="greetings">
                 <h1>Hi! I'm João ☺</h1>
@@ -39,16 +39,39 @@
         </div>
 
         <!--About Me-->
-        <div class="aboutMe">
+        <div class="about-me">
              <div class="introduction">
-                <div class="circleImage">
+                <div class="circle-image">
                     <img src="assets/images/3089.jpg">
                 </div>
                 <p>	Hello! Let me introduce myself. I'm a Portuguese guy passionate for life and tech things (basically, everything that works with bits XD). I love to spend time with amazing people, listen music, watch some movies, discover new things and places and watch a beautiful sunset at the beach hearing the sound of the waves. I studied Computer Science at University of Algarve, Portugal, was a volunteer at WebSummit 2016 and i'm about to start working in Lisbon as a Java Developer.</p>
             </div> 
-             <div class="seeMore">
-                <a href="http://joaoppcastelo.github.io/about.html" >See more</a>    
+             <div class="see-more">
+                <a href="http://joaoppcastelo.github.io/about.html">See more</a>    
             </div> 
+        </div>
+
+        <!--Projects-->
+        <div class="projects">
+            <div class="project-header">
+                <h1>Projects</h1>
+            </div>
+            <div class="content-align-center">
+
+                <!--Moonshot Project-->
+                <div class="project-card project-card-beacon project-card-beacon-compact">
+                    <a href="http://joaoppcastelo.github.io/MoonshotProject.html">
+                        <div class="project-card-ico">
+                            <img src="assets/images/moonshot1.png" alt="">
+                        </div>
+                        <div class="project-card-details">
+                            <h3>Moonshot</h3>
+                        </div>
+                    </a>
+                </div>
+
+                
+            </div>
         </div>
 
     </body>
