Task37 - Add footer to Moonshot Project Page - Add footer

--- a/MoonshotProject.html
+++ b/MoonshotProject.html
@@ -33,5 +33,32 @@
             </div>
         </div>
 
+        <!--Footer-->
+        <div class="footer">
+            <div class="left-footer">
+                <a href="http://joaoppcastelo.github.io/About.html">
+                    <p>About</p>
+                </a>
+                <p>© Copyright 2017</p>
+            </div>
+            <div class="right-footer">
+                <a href="https://www.facebook.com/joaoppcastelo" target="_blank">
+                    <img src="assets/images/footer-icons/facebook.svg" alt="Facebook logo">
+                </a>
+                <a href="https://www.instagram.com/_joaoppcastelo/" target="_blank">
+                    <img src="assets/images/footer-icons/instagram.svg" alt="Instagram logo">
+                </a>
+                <a href="https://www.linkedin.com/in/joaoppcastelo/" target="_blank">
+                    <img src="assets/images/footer-icons/linkedin.svg" alt="LinkedIn logp">
+                </a>
+                <a href="https://twitter.com/joaoppcastelo" target="_blank">
+                    <img src="assets/images/footer-icons/twitter.svg" alt="Twitter logo">
+                </a>
+                <a href="mailto:joaocastelo.dev@outlook.com" target="_blank">
+                    <img src="assets/images/footer-icons/windows.svg" alt="Windows logo">
+                </a>
+            </div>
+        </div>
+
     </body>
 </html>
