Better organization of assets

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
         <!--TopImage-->
         <div class="page-top-image">
-            <img src="assets/images/sebastian-schuppik-326430.jpg" alt="Mountain view - Trolltunga, Norway">
+            <img src="assets/images/unsplash-images/sebastian-schuppik-326430.jpg" alt="Mountain view - Trolltunga, Norway">
             <div class="greetings">
                 <h1>Hi! I'm João ☺</h1>
             </div>
@@ -62,7 +62,7 @@
                 <div class="project-card project-card-beacon project-card-beacon-compact">
                     <a href="http://joaoppcastelo.github.io/MoonshotProject.html">
                         <div class="project-card-ico">
-                            <img src="assets/images/moonshot1.png" alt="">
+                            <img src="assets/images/projects-images/moonshot1.png" alt="">
                         </div>
                         <div class="project-card-details">
                             <h3>Moonshot</h3>
