Task34&35 - Add project's image - Add project's description

--- a/MoonshotProject.html
+++ b/MoonshotProject.html
@@ -34,13 +34,12 @@
         </div>
 
         <!--Project-->
+        <div class="project-header">
+            <h1>Moonshot - Web store</h1>
+        </div>
         <div class="project">
-            <div class="project-header">
-                <h1>Moonshot - Web store</h1>
-            </div>
-
             <div class="project-image">
-                
+                <img src="assets/images/projects-images/moonshot2.png" alt="">
             </div>
             <div class="project-description">
                 <p>Moonshot is a webstore developed for the Web Application Development class at the University of Algarve, Portugal. The project consisted in the creation of an online store using the model-view-controller paradigm and using an opensource scripting language (PHP in my case), and/or a framework, where i used CodeIgniter.</p>
