Task36 - Add link buttons for project's page and GitHub repository

--- a/MoonshotProject.html
+++ b/MoonshotProject.html
@@ -46,9 +46,18 @@
  
                 <p>So, for this project i opted to create a webstore for photos/wallpapers, grouped by categories like animals, sports, people, etc, where the client, after sign in, can "buy" a selected photo and use it. The user also has access to all the photos that bought previously and a shopping cart. For the design, i created something simple and where the main focus are the photos available to the user. You can see and try the live website or check the source code available on GitHub.</p>
             </div>
-            <div class="project-links">
-                
-            </div>
+        </div>
+        <div class="project-links">
+            <a href="http://all.deei.fct.ualg.pt/~a52781/" target="_blank">
+                <div class="project-link">
+                    <h1>Open</h1>
+                </div>
+            </a>
+            <a href="https://github.com/JoaoPPCastelo/Moonshot-Web-Store" target="_blank">
+                <div class="project-github-link">
+                     <img src="assets/images/github-logo.png" alt="GitHub logo"> 
+                </div>
+            </a>
         </div>
 
         <!--Footer-->
