CSS class rename

--- a/MoonshotProject.html
+++ b/MoonshotProject.html
@@ -34,7 +34,7 @@
         </div>
 
         <!--Project-->
-        <div class="project-header">
+        <div class="title-center">
             <h1>Moonshot - Web store</h1>
         </div>
         <div class="project">
