--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <!--Projects-->
         <div class="projects">
-            <div class="project-header">
+            <div class="title-center">
                 <h1>Projects</h1>
             </div>
             <div class="content-align-center">
