Task41 - Add credits section

--- a/About.html
+++ b/About.html
@@ -42,6 +42,30 @@
             
         </div>
 
+         <!--Credits-->
+        <div class="title-center">
+            <h1>Credits</h1>
+        </div>
+        <div class="credits">
+            <h4>Images:</h4>
+            <p>
+                Deanna Ritchie - <a href="https://unsplash.com/@deannaritchie?photo=wORTURlz7jg" target="_blank">Long Bay Beach, Turks and Caicos Islands</a>
+            </p>
+            <p>
+                Nathan Anderson - <a href="https://unsplash.com/@nathananderson?photo=prIk6PdCrgg" target="_blank">Breckenridge, United States</a>
+            </p>
+            <p>
+                Sebastian Schuppik - <a href="https://unsplash.com/@supa_95?photo=XjXLczRKcJg" target="_blank">Trolltunga, Norway</a>
+            </p>
+            <h4>Icons:</h4>
+            <p>
+                Madebyoliver - <a href="https://www.flaticon.com/packs/social-media-2" target="_blank">Social Media 2</a>
+            </p>
+            <p>
+                Konpa - <a href="http://konpa.github.io/devicon/" target="_blank">Devicon</a>
+            </p>
+        </div>
+
         <!--Footer-->
         <div class="footer">
             <div class="left-footer">
