Task40 - Add skills - Add assets

--- a/About.html
+++ b/About.html
@@ -39,7 +39,26 @@
         </div>
         <div class="about-me-description">
             <p>So… about me… i'm a normal guy that currently lives in Lisbon, Portugal. I'm passionate for technology, music, travel, a great time with great friends and a nice sunset at the beach (even better with friends) ;-) About my professional journey, i studied Computer Science at University of Algarve, Portugal, where my passion for technology increased and where i learnt really interesting things. I learnt how to transform coffee into code (sorry, programmer's joke XD ) and how to create a functional mobile App and backend with data bases, frameworks (Laravel is great!!), API's and that kind of really cool stuff if you're crazy like me. I also was one of the thousands of volunteers @ WebSummit 2016 where i had the opportunity to fall in lover even more for the tech world. And basically, that's all. I'm about to start working as a Java Developer and i hope to be able to work on my personal projects (i have a few ideas…) that you'll be able to find here and on my GitHub as well.</p>
-            
+        </div>
+
+        <!--Skills-->
+        <div class="title-center">
+            <h1>Skills</h1>
+        </div>
+        <div class="skills">
+            <img src="assets/images/skills/android-original.svg" alt="">
+            <img src="assets/images/skills/bootstrap-plain-wordmark.svg" alt="">
+            <img src="assets/images/skills/c-original.svg" alt="">
+            <img src="assets/images/skills/codeigniter-plain-wordmark.svg" alt="">
+            <img src="assets/images/skills/csharp-original.svg" alt="">
+            <img src="assets/images/skills/css3-original-wordmark.svg" alt="">
+            <img src="assets/images/skills/git-original-wordmark.svg" alt="">
+            <img src="assets/images/skills/html5-original-wordmark.svg" alt="">
+            <img src="assets/images/skills/java-original-wordmark.svg" alt="">
+            <img src="assets/images/skills/laravel-plain-wordmark.svg" alt="">
+            <img src="assets/images/skills/linux-original.svg" alt="">
+            <img src="assets/images/skills/mysql-original-wordmark.svg" alt="">
+            <img src="assets/images/skills/php-original.svg" alt="">
         </div>
 
          <!--Credits-->
