--- a/About.html
+++ b/About.html
@@ -46,19 +46,19 @@
             <h1>Skills</h1>
         </div>
         <div class="skills">
-            <img src="assets/images/skills/android-original.svg" alt="">
-            <img src="assets/images/skills/bootstrap-plain-wordmark.svg" alt="">
-            <img src="assets/images/skills/c-original.svg" alt="">
-            <img src="assets/images/skills/codeigniter-plain-wordmark.svg" alt="">
-            <img src="assets/images/skills/csharp-original.svg" alt="">
-            <img src="assets/images/skills/css3-original-wordmark.svg" alt="">
-            <img src="assets/images/skills/git-original-wordmark.svg" alt="">
-            <img src="assets/images/skills/html5-original-wordmark.svg" alt="">
-            <img src="assets/images/skills/java-original-wordmark.svg" alt="">
-            <img src="assets/images/skills/laravel-plain-wordmark.svg" alt="">
-            <img src="assets/images/skills/linux-original.svg" alt="">
-            <img src="assets/images/skills/mysql-original-wordmark.svg" alt="">
-            <img src="assets/images/skills/php-original.svg" alt="">
+            <img src="assets/images/skills/android-original.svg" alt="Android">
+            <img src="assets/images/skills/bootstrap-plain-wordmark.svg" alt="Bootstrap">
+            <img src="assets/images/skills/c-original.svg" alt="C">
+            <img src="assets/images/skills/codeigniter-plain-wordmark.svg" alt="CodeIgniter">
+            <img src="assets/images/skills/csharp-original.svg" alt="C#">
+            <img src="assets/images/skills/css3-original-wordmark.svg" alt="CSS3">
+            <img src="assets/images/skills/git-original-wordmark.svg" alt="Git">
+            <img src="assets/images/skills/html5-original-wordmark.svg" alt="HTML5">
+            <img src="assets/images/skills/java-original-wordmark.svg" alt="Java">
+            <img src="assets/images/skills/laravel-plain-wordmark.svg" alt="Laravel">
+            <img src="assets/images/skills/linux-original.svg" alt="Linux">
+            <img src="assets/images/skills/mysql-original-wordmark.svg" alt="MySQL">
+            <img src="assets/images/skills/php-original.svg" alt="PHP">
         </div>
 
          <!--Credits-->
