Fix broken link @ See more

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<div class="introduction-content">
                 	<p>	Hello! Let me introduce myself. I'm a Portuguese guy passionate for life and tech things (basically, everything that works with bits XD). I love to spend time with amazing people, listen music, watch some movies, discover new things and places and watch a beautiful sunset at the beach hearing the sound of the waves. I studied Computer Science at University of Algarve, Portugal, was a volunteer at WebSummit 2016 and i'm about to start working in Lisbon as a Java Developer.</p>
              		<div class="see-more">
-                		<a href="http://joaoppcastelo.github.io/about.html">See more</a>    
+                		<a href="http://joaoppcastelo.github.io/About.html">See more</a>    
             		</div> 
 				</div>
             </div> 
