✨ Add posts page and update home

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ introduction: |
   
   Feel free to check:
 
-  - [Information about myself](/about/)
-  - [My CV](/cv.html)
-  - The blog posts below
+  - [a brief descriptio about me](/about)
+  - [my CV](/cv)
+  - [the blog posts that i wrote](/posts)
 ---
