✏️ Fix typo on the home page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ introduction: |
   
   Feel free to check:
 
-  - [a brief descriptio about me](/about)
+  - [a brief description about me](/about)
   - [my CV](/cv)
   - [the blog posts that i wrote](/posts)
 ---
